Add script and link tags

--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="mobile-web-app-capable" content="yes">
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="/modules/bootstrap/dist/css/bootstrap.min.css">
+
 </head>
 <body>
     
     <h1>Photo Message</h1>
+
+    <!-- Scripts -->
+    <script src="/modules/jquery/dist/jquery.min.js"></script>
+    <script src="/modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
