--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,53 @@
         </div>
     </main>
 
+    <div class="container-fluid fixed-bottom">
+        <div id="toolbar"
+             class="row bg-dark">
+            <div class="col p-2 d-flex">
+
+                <button data-toggle="modal"
+                        data-target="#viewfinder"
+                        id="camera"
+                        class="fas fa-camera fa-lg px-3 mr-2 text-light border-light bg-dark rounded-circle"></button>
+                <textarea id="caption"
+                          placeholder="Image Caption..."
+                          maxlength="120"
+                          style="resize: none;"
+                          class="flex-grow-1 w-100 rounded border-light align-middle pr-5"></textarea>
+                <a id="send"
+                   style="right: 1.25rem; bottom: 1.25rem; padding: 0.5rem;"
+                   class="fas fa-paper-plane fa-lg position-absolute text-dark"></a>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Camera Modal -->
+    <div id="viewfinder"
+         class="modal fade"
+         tabindex="-1"
+         role="dialog"
+         aria-hidden="true">
+        <div class="modal-dialog fixed-bottom"
+             role="document">
+            <div class="modal-content bg-dark">
+                <div class="modal-body p-1 text-center">
+
+                    <video id="player"
+                           autoplay
+                           class="w-100 rounded bg-white"
+                           style="height: 300px;"></video>
+                    <button data-dismiss="modal"
+                            id="shutter"
+                            type="button"
+                            class="fas fa-circle fa-3x rounded-circle bg-white text-danger p-1 my-2"></button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="/modules/jquery/dist/jquery.min.js"></script>
     <script src="/modules/bootstrap/dist/js/bootstrap.min.js"></script>
