Add placeholder for user interface login

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,26 @@
     <link rel="stylesheet"
           href="/modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet"
+          href="/modules/toastr/build/toastr.min.css">
+    <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
           crossorigin="anonymous">
+
+    <style media="screen">
+        #toast-container {
+            top: 0;
+            left: 0;
+            width: 100%;
+        }
+
+        #toast-container>div {
+            opacity: 1;
+            box-shadow: 0 0 2rem rgba(0, 0, 0, 0.75);
+            border-radius: 0;
+            width: 100%;
+        }
+    </style>
 
 </head>
 
@@ -86,6 +103,19 @@
     <!-- Scripts -->
     <script src="/modules/jquery/dist/jquery.min.js"></script>
     <script src="/modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/modules/toastr/build/toastr.min.js"></script>
+    <script src="/main.js"></script>
+
+    <!-- Init App is supported -->
+    <script>
+        // Check compatibility
+        if ('mediaDevices' in navigator) {
+            _init();
+        } else {
+            // Show notification
+            toastr.error(null, 'This app is not supported by your browser.', { timeout: 30000 });
+        }
+    </script>
 
 </body>
 
