--- a/app/index.html
+++ b/app/index.html
@@ -125,8 +125,10 @@
     <!-- Scripts -->
     <script src="/modules/jquery/dist/jquery.min.js"></script>
     <script src="/modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/modules/toastr/build/toastr.min.js"></script>
     <script src="/Classes/Camera.js"></script>
+    <script src="/Classes/Message.js"></script>
     <script src="/main.js"></script>
 
     <!-- Init App is supported -->
