--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,13 @@
           content="ie=edge">
     <meta name="mobile-web-app-capable"
           content="yes">
+    <meta name="theme-color"
+          content="#19A2B8">
+    <link rel="icon"
+          href="icons/favicon.ico"
+          type="image/x-icon">
+    <link rel="manifest"
+          href="manifest.json">
 
     <!-- Styles -->
     <link rel="stylesheet"
